# r_web_file_downloader

./: .gitignore  Cargo.toml  README.md
src/: file_downloader.rs  file_link_scrapper.rs  lib.rs  main.rs
tests/: intergration_tests.rs
