[package]
name = "r_web_file_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
reqwest = "0.12.2"
scraper = "0.19.0"
futures = "=0.3.30"
tokio = { version = "1", features = ["full"] }
